2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicLookAndFeel.java:
	(initComponentDefaults): Added, changed and removed some
	tabbed pane properties.

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* examples/gnu/classpath/examples/swing/TabbedPaneDemo.java:
	(createContent): Changed menu item name and tab naming.

2006-09-01  Roman Kennke  <kennke@aicas.com>

	PR 28922
	* javax/swing/plaf/basic/BasicHTML.java
	(HTMLRootView.getAttributes): Overridden to return null.
	(HTMLRootView.getElement): Overridden to return the view's
	element.

2006-09-01  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicTabbedPaneUI.java:
	(calculateTabAreaHeight): Use getTabRunOverlay method instead
	of accessing variable directly.
	(calculateTabAreaWidth): Dito.

2006-08-31  Keith Seitz  <keiths@redhat.com>

	* include/jvmti.h: Include jvmti_md.h.

2006-08-31  Keith Seitz  <keiths@redhat.com>

	From Martin Platter  <motse@complang.tuwien.ac.at>:
	* Makefile.am (include_HEADERS): Include jvmti.h.
	* include/jvmti.h (jvmtiEnv) [!__cplusplus]: Add missing '*'.
	(jvmtiError): Remove superfluous comma after last entry.
	(jvmtiEvent): It's "BREAKPOINT" not "BERAKPOINT".
	(_Jv_jvmtiEnv.StopThread): Add missing exception parameter.
	(_Jv_jvmtiEnv.RawMonitorWait): Add missing millis parameter.
	(_Jv_jvmtiEnv.GetSourceFileName): source_name_ptr is pointer to
	character pointer.
	(_Jv_JVMTIEnv::StopThread): Add missing exception parameter.
	(_Jv_JVMTIEnv::RawMonitorWait): Add missing millis parameter.
	(_Jv_JVMTIEnv::GetSourceFileName): source_name_ptr is pointer to
	character pointer.

2006-08-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/BoxView.java
	(getWidth): Return the width with insets added, not with one
	added and one removed.
	(getHeight): Return the height with insets added, not with one
	added and one removed.
	* javax/swing/text/GlyphView.java