@@ -1,5 +1,11 @@
 2006-09-01  Robert Schuster  <robertschuster@fsfe.org>
 
+	* javax/swing/plaf/metal/MetalCheckBoxIcon.java:
+	(paintIcon): Removed unused import statements, lowered cast requirement
+	from JCheckBox to AbstractButton.
+
+2006-09-01  Robert Schuster  <robertschuster@fsfe.org>
+
 	* javax/swing/plaf/basic/BasicLookAndFeel.java:
 	(initComponentDefaults): Added, changed and removed some
 	tabbed pane properties.
